# curses_utils

./: CMakeLists.txt  curses_utils.h  main.cpp
docs/: doxygen.conf  main.md
examples/: example0_simple_menu.h
